# subzero

./: .gitignore  CMakeLists.txt  MANUAL.md  README.md  test.md  test1.txt  test2.txt
include/: buffer.h  compat.h  cpp_syntax_highlighter.h  editor.h  markdown_syntax_highlighter.h  ncurses_terminal.h  plugin_manager.h  subzero.h  syntax_highlighter.h  syntax_highlighter_manager.h  terminal.h  terminal_factory.h  terminal_types.h  utf8_utils.h  win_console_terminal.h  window.h
plugin/: CMakeLists.txt  cpp_highlighter.cpp
src/: buffer.cpp  cpp_syntax_highlighter.cpp  editor.cpp  main.cpp  markdown_syntax_highlighter.cpp  ncurses_terminal.cpp  plugin_manager.cpp  syntax_highlighter_manager.cpp  terminal_factory.cpp  utf8_utils.cpp  win_console_terminal.cpp  window.cpp
